--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>{% block page_name %}{% endblock page_name %} Nbnb</title>
 </head>
 
 <body>
-    &copy; Nbnb
+    {% include "partials/header.html" %}
+    {% block content %}
+    {% endblock content %}
+    {% include "partials/footer.html" %}
 </body>
 
 </html>
 {% comment %}
-    이 파일은 직접 render하는 것이 아닌 공통적으로 쓰는 '뼈대'같은 파일이다.
-    이것을 이제 각각의 view마다 render할 때 이 파일을 extends 해서 
-    페이지를 만들 것이다.
+    블록은 같은 형식의 파일안에 내용만 다르게 할 수 있도록 하는 기능을 갖고 있다.
+    include는 일부 html파일을 그대로 넣기 위할 때 쓰는 것이다.
+    여기서 content는 home.html안에서 쓴 content block 내용이 들어간다.
+    block은 뼈대가 되는 파일과 따로 분리해서 쓰는 파일에 모두 써야한다.
 {% endcomment %}
