--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -8,4 +8,12 @@
     {% for room in rooms %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
+
+    <h5> Page {{page}} of {{page_count}} </h5>
+
+    
+    {% for page in page_range %}
+        <a href="?page={{page}}">{{page}}</a>
+    {% endfor %}
+        
 {% endblock content %}
