--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -5,28 +5,30 @@
 {% endblock page_name %}
 
 {% block content %}
-    {% for room in rooms %}
+    {% for room in rooms.object_list %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
 
     <h5> 
-    {% if page is not 1 %}
-        <a href="?page={{page|add:-1}}">Previous</a>
+    {% comment %} 
+        paginator에는 이전 페이지나 다음 페이지를 판별하는 메소드가 있다.
+        그게 rooms.has_previous, rooms.has_next이다.
+    {% endcomment %}
+    {% if rooms.has_previous %}
+        <a href="?page={{rooms.number|add:-1}}">Previous</a>
     {% endif %}
 
-    Page {{page}} of {{page_count}} 
+    Page {{rooms.number}} of {{rooms.paginator.num_pages}} 
     
-    
-    {% if not page == page_count %}
-        <a href="?page={{page|add:1}}">Next</a>
+    {% if rooms.has_next %}
+        <a href="?page={{rooms.number|add:1}}">Next</a>
     {% endif %}
+
+    {% comment %} 페이지들을 쫙 나열하고 싶을 때는 아래의 코드를 쓴다. {% endcomment %}
+    {% for page in rooms.paginator.page_range %}
+        <a href="?page={{page}}">{{page}}</a>
+    {% endfor %}
         
     </h5>
-    {% comment %} 
-        {{page}} 여기에다가 더 많은 로직을 쓰면 에러가 난다.
-        예를 들어 {{page - 1}}이렇게 쓰면 템플릿 문법 에러가 난다.
-        django가 이를 허용하지 않아서 인데
-        에러가 나지 않게 하기 위해서는 위의 방식처럼 쓰면 된다.
-    {% endcomment %}
         
 {% endblock content %}
