--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -5,7 +5,7 @@
 {% endblock page_name %}
 
 {% block content %}
-    {% for room in page.object_list %}
+    {% for room in object_list %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
 
@@ -14,19 +14,19 @@
         paginator에는 이전 페이지나 다음 페이지를 판별하는 메소드가 있다.
         그게 page.has_previous, page.has_next이다.
     {% endcomment %}
-    {% if page.has_previous %}
-        <a href="?page={{page.number|add:-1}}">Previous</a>
+    {% if page_obj.has_previous %}
+        <a href="?page={{page_obj.previous_page_number}}">Previous</a>
     {% endif %}
 
-    Page {{page.number}} of {{page.paginator.num_pages}} 
+    Page {{page_obj.number}} of {{page_obj.paginator.num_pages}} 
     
-    {% if page.has_next %}
-        <a href="?page={{page.number|add:1}}">Next</a>
+    {% if page_obj.has_next %}
+        <a href="?page={{page_obj.next_page_number}}">Next</a>
     {% endif %}
 
     {% comment %} 페이지들을 쫙 나열하고 싶을 때는 아래의 코드를 쓴다. {% endcomment %}
-    {% for page in page.paginator.page_range %}
-        <a href="?page={{page}}">{{page}}</a>
+    {% for page in page_obj.paginator.page_range %}
+        <a href="?page={{page_obj}}">{{page_obj}}</a>
     {% endfor %}
         
     </h5>
