--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -5,7 +5,7 @@
 {% endblock page_name %}
 
 {% block content %}
-    {% for room in object_list %}
+    {% for room in rooms %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
 
