--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -1,43 +1,44 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-    Search
+Search
 {% endblock page_title %}
 
 
 {% block search-bar %}
 {% endblock search-bar %}
-    
+
 
 {% block content %}
-    
-    <h2>Search!</h2>
 
-    <form action="{% url "rooms:search" %}">
-        <div>
-            <label for="city">City</label>
-            <input value="{{city}}" id="city" name="city" placeholder="Search By City" />
-        </div>
+<h2>Search!</h2>
 
-        <div>
-            <label for="country">Country</label>
-            <select name="country" id="country">
-                {% for country in countries %}
-                    <option value="{{country.code}}">{{country.name}}</option>
-                {% endfor %}
-            </select>
-        </div>
+<form action="{% url "rooms:search" %}">
+    <div>
+        <label for="city">City</label>
+        <input value="{{city}}" id="city" name="city" placeholder="Search By City" />
+    </div>
 
-        <div>
-            <label for="room_type">Room Type</label>
-            <select name="room_type" id="room_type">
-                {% for room_type in room_types %}
-                    <option value="{{room_type.pk}}">{{room_type.name}}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <button>Search</button>
-    </form>
-    
+    <div>
+        <label for="country">Country</label>
+        <select name="country" id="country">
+            {% for country in countries %}
+            <option value="{{country.code}}">{{country.name}}</option>
+            {% endfor %}
+        </select>
+    </div>
+
+    <div>
+        <label for="room_type">Room Type</label>
+        <select name="room_type" id="room_type">
+            <option value="0" {% if s_room_type == 0 %}selected{% endif %}>Any Kind</option>
+            {% for room_type in room_types %}
+            <option value="{{room_type.pk}}" {% if s_room_type == room_type.pk %}selected{% endif %}>{{room_type.name}}
+            </option>
+            {% endfor %}
+        </select>
+    </div>
+    <button>Search</button>
+</form>
+
 {% endblock content %}
-    
