--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -11,89 +11,97 @@ Search
 
 {% block content %}
 
-<h2>Search!</h2>
+    <h2>Search!</h2>
 
-<form action="{% url "rooms:search" %}">
-    <div>
-        <label for="city">City</label>
-        <input value="{{city}}" id="city" name="city" placeholder="Search By City" />
-    </div>
+    <form action="{% url "rooms:search" %}">
+        <div>
+            <label for="city">City</label>
+            <input value="{{city}}" id="city" name="city" placeholder="Search By City" />
+        </div>
 
-    <div>
-        <label for="country">Country</label>
-        <select name="country" id="country">
-            {% for country in countries %}
-            <option value="{{country.code}}" {% if country.code == s_country %}selected{% endif %}>{{country.name}}
-            </option>
-            {% endfor %}
-        </select>
-    </div>
+        <div>
+            <label for="country">Country</label>
+            <select name="country" id="country">
+                {% for country in countries %}
+                <option value="{{country.code}}" {% if country.code == s_country %}selected{% endif %}>{{country.name}}
+                </option>
+                {% endfor %}
+            </select>
+        </div>
 
-    <div>
-        <label for="room_type">Room Type</label>
-        <select name="room_type" id="room_type">
-            <option value="0" {% if s_room_type == 0 %}selected{% endif %}>Any Kind</option>
-            {% for room_type in room_types %}
-            <option value="{{room_type.pk}}" {% if s_room_type == room_type.pk %}selected{% endif %}>{{room_type.name}}
-            </option>
-            {% endfor %}
-        </select>
-    </div>
-    <div>
-        <label for="price">Price</label>
-        <input value="{{price}}" type="number" name="price" id="price" placeholder="Price">
-    </div>
-    <div>
-        <label for="guests">Guests</label>
-        <input value="{{guests}}" type="number" name="guests" id="guests" placeholder="Guests">
-    </div>
-    <div>
-        <label for="bedrooms">Bedrooms</label>
-        <input value="{{bedroom}}" type="number" name="bedrooms" id="bedrooms" placeholder="Bedrooms">
-    </div>
-    <div>
-        <label for="beds">Beds</label>
-        <input value="{{beds}}" type="number" name="beds" id="beds" placeholder="Beds">
-    </div>
-    <div>
-        <label for="baths">Baths</label>
-        <input value="{{baths}}" type="number" name="baths" id="baths" placeholder="Baths">
-    </div>
-    <div>
-        <label for="instant">Instant Book Only?</label>
-        <input type="checkbox" name="instant" id="instant" {% if instant %}checked{% endif %} />
-    </div>
-    <div>
-        <label for="instant">By Superhost Only?</label>
-        <input type="checkbox" name="super_host" id="super_host" {% if super_host %}checked{% endif %} />
-    </div>
-    <div>
-        <h3>Amenities</h3>
-        <ul>
+        <div>
+            <label for="room_type">Room Type</label>
+            <select name="room_type" id="room_type">
+                <option value="0" {% if s_room_type == 0 %}selected{% endif %}>Any Kind</option>
+                {% for room_type in room_types %}
+                <option value="{{room_type.pk}}" {% if s_room_type == room_type.pk %}selected{% endif %}>{{room_type.name}}
+                </option>
+                {% endfor %}
+            </select>
+        </div>
+        <div>
+            <label for="price">Price</label>
+            <input value="{{price}}" type="number" name="price" id="price" placeholder="Price">
+        </div>
+        <div>
+            <label for="guests">Guests</label>
+            <input value="{{guests}}" type="number" name="guests" id="guests" placeholder="Guests">
+        </div>
+        <div>
+            <label for="bedrooms">Bedrooms</label>
+            <input value="{{bedrooms}}" type="number" name="bedrooms" id="bedrooms" placeholder="Bedrooms">
+        </div>
+        <div>
+            <label for="beds">Beds</label>
+            <input value="{{beds}}" type="number" name="beds" id="beds" placeholder="Beds">
+        </div>
+        <div>
+            <label for="baths">Baths</label>
+            <input value="{{baths}}" type="number" name="baths" id="baths" placeholder="Baths">
+        </div>
+        <div>
+            <label for="instant">Instant Book Only?</label>
+            <input type="checkbox" name="instant" id="instant" {% if instant %}checked{% endif %} />
+        </div>
+        <div>
+            <label for="instant">By Superhost Only?</label>
+            <input type="checkbox" name="super_host" id="super_host" {% if super_host %}checked{% endif %} />
+        </div>
+        <div>
+            <h3>Amenities</h3>
+            <ul>
 
-            {% for amenity in amenities %}
-            <li>
-                <label for="a_{{amenity.pk}}">{{amenity.name}}</label>
-                <input id="a_{{amenity.pk}}" name="amenities" type="checkbox" value="{{amenity.pk}}"
-                    {% if amenity.pk|slugify in s_amenities %}checked{% endif %} />
-                <!-- amenity.pk는 int고 s_amenities는 str의 리스트이다. 저렇게 |slugify를 해주면 str로 바꿔준다.  -->
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div>
-        <h3>Facilities</h3>
-        <ul>
-            {% for facility in facilities %}
-            <li>
-                <label for="f_{{facility.pk}}">{{facility.name}}</label>
-                <input id="f_{{facility.pk}}" name="facilities" type="checkbox" value="{{facility.pk}}"
-                    {% if facility.pk|slugify in s_facilities %}checked{% endif %} />
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <button>Search</button>
-</form>
+                {% for amenity in amenities %}
+                <li>
+                    <label for="a_{{amenity.pk}}">{{amenity.name}}</label>
+                    <input id="a_{{amenity.pk}}" name="amenities" type="checkbox" value="{{amenity.pk}}"
+                        {% if amenity.pk|slugify in s_amenities %}checked{% endif %} />
+                    <!-- amenity.pk는 int고 s_amenities는 str의 리스트이다. 저렇게 |slugify를 해주면 str로 바꿔준다.  -->
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            <h3>Facilities</h3>
+            <ul>
+                {% for facility in facilities %}
+                <li>
+                    <label for="f_{{facility.pk}}">{{facility.name}}</label>
+                    <input id="f_{{facility.pk}}" name="facilities" type="checkbox" value="{{facility.pk}}"
+                        {% if facility.pk|slugify in s_facilities %}checked{% endif %} />
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <button>Search</button>
+    </form>
+
+    <h3> Results </h3>
+
+
+    {% for room in rooms %}
+        <h3>{{room.name}}</h3>
+    {% endfor %}
+    
 
 {% endblock content %}
