--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <title>{% block page_title %}{% endblock page_title %} | Nbnb</title>
 </head>
 
@@ -12,14 +14,14 @@
     <header>
         {% include 'partials/nav.html' %}
         {% block search-bar %}
-            <form method="get" action="{% url "rooms:search" %}">
-                <input name="city" placeholder="Search By City">
-            </form>
+        <form method="get" action="{% url "rooms:search" %}">
+            <input name="city" placeholder="Search By City">
+        </form>
         {% endblock search-bar %}
-        {% comment %} 
-            header태그 안에는 value가 전달되지 않음.  
-            value를 전달하려는 것은 검색한 city가 태그에 입력되어 있도록 하기 위해서다.
-            그래서 value가 전달되는 form태그는 search.html에 있다.
+        {% comment %}
+        header태그 안에는 value가 전달되지 않음.
+        value를 전달하려는 것은 검색한 city가 태그에 입력되어 있도록 하기 위해서다.
+        그래서 value가 전달되는 form태그는 search.html에 있다.
         {% endcomment %}
     </header>
     {% block content %}
