--- a/templates/base.html
+++ b/templates/base.html
@@ -12,13 +12,15 @@
 
 <body class="text-grey-800">
     <header class="container max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400">
-        <div class="flex items-center">
+        <div class="w-1/3 flex items-center">
             <a href="{% url "core:home" %}" class="mr-6">
                 <img class="w-6" src="{% static 'img/logo.png' %}">
             </a>
             {% block search-bar %}
-            <form method="get" action="{% url "rooms:search" %}">
-                <input class="border px-2 py-1 rounded-sm" name="city" placeholder="Search By City">
+            <form class="w-9/12" method="get" action="{% url "rooms:search" %}">
+                <input
+                    class="search-box border px-5 w-full font-medium text-gray-900 placeholder-gray-500 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none"
+                    name="city" placeholder="Search By City">
             </form>
             {% endblock search-bar %}
             {% comment %}
