--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -3,7 +3,7 @@
     {% if user.is_authenticated %}
         <li class="ml-4"><a href="{% url "users:logout" %}">Log Out</a></li>
     {% else %}
-        <li class="ml-4"><a href="{% url "users:login" %}">Log In</a></li>
+        <li class="ml-4 border-b-2 border-white hover:border-blue-400"><a href="{% url "users:login" %}">Log In</a></li>
         <li class="ml-4"><a href="{% url "users:signup" %}">Sign Up</a></li>
     {% endif %}
     
