--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
     <title>{% block page_title %}{% endblock page_title %} | Nbnb</title>
 </head>
 
-<body class="text-grey-800">
-    <header class="container max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400">
+<body class="text-grey-800 mt-24">
+    <header
+        class="container max-w-full inset-0 flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
         <div class="w-1/3 flex items-center">
             <a href="{% url "core:home" %}" class="mr-6">
                 <img class="w-6" src="{% static 'img/logo.png' %}">
