--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             {% block search-bar %}
             <form class="w-9/12" method="get" action="{% url "rooms:search" %}">
                 <input
-                    class="search-box border px-5 w-full font-medium text-gray-900 placeholder-gray-500 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none"
+                    class="search-box border px-5 w-full font-bold text-gray-900 placeholder-gray-600 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none"
                     name="city" placeholder="Search By City">
             </form>
             {% endblock search-bar %}
