--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -5,6 +5,11 @@
 {% endblock page_title %}
 
 {% block content %}
+
+    <div class="container rounded-xl mx-auto bg-gray-800 w-full h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
+
+    </div>
+
     {% for room in rooms %}
         <h3>
             <a href="{% url "rooms:detail" room.pk %}">
