--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
+    <link rel="icon" type="image/png" href="http://example.com/myicon.png">
     <title>{% block page_title %}{% endblock page_title %} | Nbnb</title>
 </head>
 
