--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -6,38 +6,35 @@
 
 {% block content %}
 
-    <div class="container rounded-xl mx-auto bg-gray-800 w-full h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
+    <div class="container mx-auto">
 
-    </div>
+        <div class="rounded-xl bg-gray-800 -mx-40 h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)"></div>
 
-    {% for room in rooms %}
-        <h3>
-            <a href="{% url "rooms:detail" room.pk %}">
-                {{room.name}} / ${{room.price}}
-            </a>
-        </h3>
-    {% endfor %}
-
-    <h5> 
-    {% comment %} 
-        paginator에는 이전 페이지나 다음 페이지를 판별하는 메소드가 있다.
-        그게 page.has_previous, page.has_next이다.
-    {% endcomment %}
-    {% if page_obj.has_previous %}
-        <a href="?page={{page_obj.previous_page_number}}">Previous</a>
-    {% endif %}
-
-    Page {{page_obj.number}} of {{page_obj.paginator.num_pages}} 
+        <div class="flex flex-wrap -mx-40">
+        {% for room in rooms %}
+            {% include 'partials/room_card.html' with room=room %}
+        {% endfor %}
+        </div>
+        <h5> 
+        {% comment %} 
+            paginator에는 이전 페이지나 다음 페이지를 판별하는 메소드가 있다.
+            그게 page.has_previous, page.has_next이다.
+        {% endcomment %}
+        {% if page_obj.has_previous %}
+            <a href="?page={{page_obj.previous_page_number}}">Previous</a>
+        {% endif %}
     
-    {% if page_obj.has_next %}
-        <a href="?page={{page_obj.next_page_number}}">Next</a>
-    {% endif %}
-
-    {% comment %} 페이지들을 쫙 나열하고 싶을 때는 아래의 코드를 쓴다. {% endcomment %}
-    {% for page in page_obj.paginator.page_range %}
-        <a href="?page={{page}}">{{page}}</a>
-    {% endfor %}
+        Page {{page_obj.number}} of {{page_obj.paginator.num_pages}} 
         
-    </h5>
-        
+        {% if page_obj.has_next %}
+            <a href="?page={{page_obj.next_page_number}}">Next</a>
+        {% endif %}
+    
+        {% comment %} 페이지들을 쫙 나열하고 싶을 때는 아래의 코드를 쓴다. {% endcomment %}
+        {% for page in page_obj.paginator.page_range %}
+            <a href="?page={{page}}">{{page}}</a>
+        {% endfor %}
+            
+        </h5>
+    </div>
 {% endblock content %}
