--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <link rel="icon" type="image/png" href="http://example.com/myicon.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <title>{% block page_title %}{% endblock page_title %} | Nbnb</title>
 </head>
 
-<body class="text-grey-800 mt-24">
+<body class="text-grey-800 mt-24 font-light">
     <header
         class="container max-w-full inset-0 flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
         <div class="w-1/3 flex items-center">
