#20.8 Footer, Social Login

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,3 @@
-<footer>
-    &copy; Nbnb
+<footer class="container mx-auto text-center py-20 border-t font-bold text-gray-500 flex flex-col">
+    © 2020 Airbnb-clone, All rights reserved.
 </footer>
