--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,8 +1,10 @@
-<div>
-    <a href="{% url 'users:github-login' %}">
-        Continue with GitHub
+<div class="flex flex-col w-full">
+    <a href="{% url 'users:github-login' %}"
+        class="w-full border-2 font-semibold text-gray-700 border-gray-700 text-center mb-2 rounded-sm py-5">
+        <i class="fab fa-github mr-1 fa-lg"></i> Continue with GitHub
     </a>
-    <a href="{% url 'users:kakao-login' %}">
-        Continue with Kakao
+    <a href="{% url 'users:kakao-login' %}"
+        class="w-full border font-semibold text-yellow-800 border-yellow-500 text-center mb-2 rounded-sm py-5 bg-yellow-400">
+        <i class="fas fa-comment mr-1 fa-lg"></i> Continue with Kakao
     </a>
 </div>
