--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,4 +17,16 @@
     }
 }
 
+.btn {
+    @apply w-full rounded-sm py-5 text-lg font-light text-center;
+}
+
+input {
+    @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
+
+    &:focus {
+        @apply outline-none border-teal-500;
+    }
+}
+
 @tailwind utilities;
