--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,10 +1,13 @@
 <div class="flex flex-col w-full">
-    <a href="{% url 'users:github-login' %}"
-        class="w-full border-2 font-semibold text-gray-700 border-gray-700 text-center mb-2 rounded-sm py-5">
+    <a href="{% url 'users:github-login' %}" class="btn border-2 text-gray-700 border-gray-700 mb-2">
         <i class="fab fa-github mr-1 fa-lg"></i> Continue with GitHub
     </a>
-    <a href="{% url 'users:kakao-login' %}"
-        class="w-full border font-semibold text-yellow-800 border-yellow-500 text-center mb-2 rounded-sm py-5 bg-yellow-400">
+    <a href="{% url 'users:kakao-login' %}" class="btn border text-yellow-800 border-yellow-500 mb-2 bg-yellow-400">
         <i class="fas fa-comment mr-1 fa-lg"></i> Continue with Kakao
     </a>
+</div>
+<div class="flex items-center w-full my-5">
+    <div class="h-px w-full bg-gray-400"></div>
+    <span class="text-gray-600 font-medium mx-4 text-sm">or</span>
+    <div class="h-px w-full bg-gray-400"></div>
 </div>
