--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -30,8 +30,18 @@ input {
 }
 
 form {
-    input {
+    .input {
         @apply mb-3;
+
+        &.has_error {
+            input {
+                @apply bg-red-300 border-gray-400;
+
+                &:focus {
+                    @apply border-gray-400;
+                }
+            }
+        }
     }
 }
 
