--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -13,29 +13,8 @@
     <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
 
         {% include 'partials/social_login.html' %}
+        {% include 'mixins/auth/auth_form.html' with form=form cta="Sign up"%}
 
-        <form method="POST" action="{% url "users:signup" %}" class="w-full">
-            {% csrf_token %}
-
-            {% if form.non_field_errors %}
-                {% for error in form.non_field_errors %}
-                    <span class="text-red-700 font-medium text-sm">{{error}}</span>
-                {% endfor %}
-            {% endif %}
-
-            {% for field in form %}
-                <div class="input {% if field.errors %}has_error{% endif %}">
-                    {{field}}
-                    {% if field.errors %}
-                        {% for error in field.errors %}
-                            <span class="text-red-700 font-medium text-sm">{{error}}</span>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-            {% endfor %}
-            
-            <button class="btn bg-red-500 text-white">Sign Up</button>
-        </form>
         <div class="mt-5">
             <span class="mr-2">Have an account?</span>
             <a href="{% url 'users:login' %}" class="text-teal-500 font-medium">Login</a>
