--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
     </header>
     {% block content %}
     {% endblock content %}
+    {% include 'partials/messages.html' %}
     {% include "partials/footer.html" %}
 </body>
 
