--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -21,6 +21,10 @@
     @apply w-full rounded-sm py-5 text-lg font-light text-center;
 }
 
+.btn-link {
+    @apply w-full rounded-lg py-3 text-lg font-light text-center text-white bg-red-500;
+}
+
 input {
     @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
 
