--- a/templates/mixins/auth/auth_form.html
+++ b/templates/mixins/auth/auth_form.html
@@ -1,4 +1,4 @@
-<form method="POST" action="{% url "users:signup" %}" class="w-full">
+<form method="POST" class="w-full">
     {% csrf_token %}
 
     {% if form.non_field_errors %}
