--- a/templates/users/update-profile.html
+++ b/templates/users/update-profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    Log In
+    Update Profile
 {% endblock page_title %}
 
 {% block search-bar %}
@@ -9,15 +9,12 @@
 
 {% block content %}
     <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
-        {% include 'partials/social_login.html' %}
-        {% include 'mixins/auth/auth_form.html' with form=form cta="Log in" %}
+        
+        {% include 'mixins/auth/auth_form.html' with form=form cta="Update Profile" %}
 
         <div class="mt-5">
-            <span class="mr-2">Don't have an account?</span>
-            <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Sign up</a>
+            <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Change Password</a>
         </div>
     </div>
  
-
-
 {% endblock content %}
