--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -25,12 +25,23 @@
     @apply w-full rounded-lg py-3 text-lg font-light text-center text-white bg-red-500;
 }
 
-input {
+input,
+textarea,
+select {
     @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
 
     &:focus {
         @apply outline-none border-teal-500;
     }
+}
+
+textarea {
+    resize: none;
+    height: 100px;
+}
+
+select {
+    height: 70px;
 }
 
 form {
