--- a/templates/users/user_detail.html
+++ b/templates/users/user_detail.html
@@ -8,7 +8,7 @@
 {% endblock search-bar %}
 
 {% block content %}
-    <div class="h-75vh">
+    <div class="min-h-75vh">
         <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
 
             {% include "mixins/user_avatar.html" with user=user_obj %}
