--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -14,4 +14,28 @@
         </div>
     </div>
 
+    <div class="container mx-auto flex justify-around pb-56">
+        <div class="w-1/2">
+            {% comment %} 이 부분이 방의 제목 부분 {% endcomment %}
+            <div class="flex justify-between">
+                <div>
+                    <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
+                    <span class="text-gray-700 font-light">{{room.city}}</span>
+                </div>
+                <a href="{{room.host.get_absolute_url}}" class="flex flex-col items-center">
+                    {% include 'mixins/user_avatar.html' with user=room.host %}
+                    <span class="mt-3 text-gray-500">{{room.host.first_name}}</span>
+                </a>
+            </div>
+            <div class="flex">
+                {{room.room_type}}
+                {{room.get_beds}}
+                {{room.bedrooms}}
+            </div>
+        </div>
+        <div class="w-1/3">
+        {% comment %} 이 부분은 예약버튼 부분인듯  {% endcomment %}
+        </div>
+    </div>
+
 {% endblock %}
