--- a/templates/rooms/room_edit.html
+++ b/templates/rooms/room_edit.html
@@ -13,6 +13,10 @@
         {% include 'mixins/room/room_form.html' with form=form cta="Update Room" %}
         
         
+        <div class="mt-5">
+            <a href="#" class="text-teal-500 font-medium">Edit Photos</a>
+        </div>
+        
     </div>
  
 {% endblock content %}
