--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +24,9 @@
             <form class="w-9/12" method="get" action="{% url "rooms:search" %}">
                 <input
                     class="search-box border px-5 w-full font-bold text-gray-900 placeholder-gray-600 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none"
-                    name="city" placeholder="Search By City">
+                    name="city" 
+                    placeholder="{% trans "Search By City" %}"
+                />
             </form>
             {% endblock search-bar %}
             {% comment %}
